Release version 0.5.4 : Some minor bug fixes and ui,memory optimization